<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note Harmony</string>
    <string name="collections">Collections</string>
    <string name="add_collection_content_description">Button to add note collections</string>
    <string name="archiv">Archiv</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="github">GitHub</string>
    <string name="github_summary">Visit this project on GitHub</string>
    <string name="menu">Menu</string>
    <string name="hidden">Hidden</string>
    <string name="hidden_notes">Hidden notes</string>
    <string name="no_hidden_notes">No hidden notes!</string>
    <string name="add">Add</string>
    <string name="collection_with_same_name_error">Collection with the same name does already exist</string>
    <string name="new_collection">New collection</string>
    <string name="collection_title">Collection title</string>
    <string name="collection_description">Collection description</string>
    <string name="title_and_description_required">Title and description are required</string>
    <string name="notes">Notes</string>
    <string name="add_note_content_description">Button to add note</string>
    <string name="new_note">New note</string>
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="title_and_content_required">Title and content are required</string>
    <string name="note_with_same_name_error">Note with the same name already exists</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="no_collection_name_found">Error: No collection name found</string>
    <string name="no_notes_found">No notes found</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion_title">Are you sure?</string>
    <string name="confirm_deletion_message">Do you really want to delete %1$s? You can\'t restore it, once you deleted it.</string>
    <string name="no_collections_found">No collections found</string>
    <string name="update">Update</string>
    <string name="folders">Folders</string>
    <string name="all">Show all notes</string>
</resources>