<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet_drag_handle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAlignment="center"
        android:layout_below="@id/bottom_sheet_drag_handle_view"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/title_text_view"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_below="@id/title_text_view"
        android:id="@+id/title_card"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Filled">

        <EditText
            android:hint="@string/title"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ton_edit_text"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="text"
            android:importantForAutofill="no"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_below="@id/title_card"
        android:layout_above="@id/button_layout"
        style="@style/Widget.Material3.CardView.Filled">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:hint="@string/content"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:id="@+id/content_edit_text"
                android:inputType="text"
                android:importantForAutofill="no" />

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:textColor="?attr/colorError"
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"/>

    </LinearLayout>

</RelativeLayout>